# cdp-portal

./: .gitallowed  .gitignore  .pre-commit-config.yaml  .safety-policy.yml  .tool-versions  .trivyignore  CODE_OF_CONDUCT  CONTRIBUTING  LICENSE  Makefile  README.md  nhsd-rules-deny.txt  pipmoduleignore.txt  sonar-project.properties
.github/workflows/: default_pipeline.yml  releases_tags_pipeline.yml
.gitlab/merge_request_templates/: default.md
portal/: .eslintrc.json  .example.env.development  .prettierignore  .prettierrc  cypress.config.ts  eslint.config.mjs  jest.config.ts  jest.setup.ts  middleware.ts  next.config.js  package-lock.json  package.json  proxy.ts  tsconfig.cypress.json  tsconfig.jest.json  tsconfig.json
portal/app/: 403.tsx  error.tsx  global-error.tsx  layout.tsx  not-found.tsx  page.tsx  pageClient.tsx
portal/app/(password-setup)/: layout.tsx
portal/app/_components/: SelectAgreementPageContent.tsx  SuccessBanner.tsx  SwitchAgreementButton.tsx  serverActions.ts  styles.module.css
portal/app/induction/: consts.ts  inductionCookie.ts  layout.tsx  page.tsx
portal/app/layout/: LayoutWrapper.tsx  footer.tsx  header.tsx  layout.module.css  logoutButton.tsx  navbar.tsx  noScriptWarning.tsx  notifications.tsx  sessionProviderWrapper.tsx  userDetails.tsx
portal/app/maintenance/: layout.tsx  page.tsx
portal/app/services/: getAgreementUserDetails.ts  getSSMParameter.ts  getUsersInAgreement.ts  hasFeatureFlagEnabled.ts  hasFeatureFlagEnabledGivenCookies.ts  hasPermissions.ts  queryPermissionsService.ts
portal/app/shared/: backLink.tsx  callLambda.ts  common.ts  createRandomId.ts  errorSummary.tsx  formFields.tsx  inductionHelpers.ts  logging.ts  roleSelector.tsx  statusTags.tsx  submitButton.tsx  submitButtonClient.tsx  textInputField.tsx  useHasJavascript.ts
portal/components/: BasePage.tsx  NotificationsBanner.tsx  OpenAgreementButton.tsx  ServicesCard.tsx  SwitchAgreementButton.tsx  WelcomeButton.tsx
portal/config/: constants.ts  whiteLabel.ts
portal/cypress/: tsconfig.json
portal/cypress/component/: BasePage.cy.tsx  FileUploadPage.cy.tsx  SelectAgreementHome.cy.tsx  SwitchAgreement.cy.tsx  SwitchAgreementContent.cy.tsx
portal/cypress/e2e/: utils.ts
portal/cypress/e2e_cdp/: utils.ts
portal/cypress/support/: commands.ts  component.ts  e2e.ts  index.ts
portal/helpers/: agreementidHelper.ts  errorHelpers.ts
portal/helpers/logging/: logger.ts
portal/jest/: middleware.test.tsx  page.test.tsx  testFactories.ts  tsconfig.json  utils.tsx
portal/jest/agreement/: page.test.tsx
portal/jest/app/: page.test.tsx
portal/jest/config/: whiteLabel.test.ts
portal/jest/helpers/: errorHelpers.test.tsx
portal/jest/induction/: inductionCookie.test.ts  inductionStartPageContent.test.tsx  layout.test.tsx  page.test.tsx
portal/jest/layout/: header.test.tsx  logoutButton.test.tsx  navbar.test.tsx  userDetails.test.tsx
portal/pages/: 403.tsx  404.tsx  405.tsx  500.tsx  _app.tsx  _document.tsx  logout_confirm.tsx  welcome.tsx
portal/services/: getAllAgreements.ts  getNotifications.ts  getUserAgreements.ts
portal/styles/: BasePage.module.css  NotificationBanner.css  nhsuk-6.2.0.min.css  style.css
portal/types/: enums.ts
scripts/: configure_local_hosts.sh  cypress-open-local.sh  cypress-run-local-e2e.sh  cypress-run.sh  download-lambda.sh  example_variables.sh  git_secrets_download.sh  git_secrets_install.sh  git_secrets_pre_commit.sh  poetry-dependency-scan.sh  poetry-package.sh  poetry-test.sh  poetry-update.sh  run-portal-server-in-background.sh
scripts/portal_banner/: pyproject.toml
scripts/portal_banner/portal_banner/: add_portal_banner_notification.py  check_dynamodb_permissions.py  check_output_with_user.py  clear_outputs.py  get_notice_values.py  notice.json  reset_notice_values.py
scripts/portal_banner/tests/: conftest.py  test_add_portal_banner_notification.py  test_check_dynamodb_permissions.py  test_check_output_with_user.py  test_get_notice_values.py  test_reset_notice_values.py
scripts/portal_banner/tests/helpers/: utils.py
src/aws-lambda/add_weekly_banner/: pyproject.toml
src/aws-lambda/add_weekly_banner/add_weekly_banner/: add_weekly_banner.py
src/aws-lambda/add_weekly_banner/tests/: conftest.py  test_add_weekly_banner.py
src/aws-lambda/data_in_forwarder/: pyproject.toml
src/aws-lambda/data_in_forwarder/data_in_forwarder/: data_in_forwarder.py
src/aws-lambda/data_in_forwarder/data_in_forwarder/templates/: failure.html  success.html
src/aws-lambda/data_in_forwarder/data_in_forwarder/utils/: __init__.py  data.py  exceptions.py
src/aws-lambda/data_in_forwarder/tests/: conftest.py  test_data_in_forwarder.py
src/aws-lambda/data_in_forwarder/tests/test_data/: empty_header_check.csv  empty_string_header_check.csv  empty_string_header_check_first_row.csv  inconsistent_column_count.csv  invalid_headers.csv  missing_middle_header_check.csv  multi_issues.csv  newlines_in_data.csv  none_header_check.csv  none_header_check_first_row.csv  too_many_columns.csv  too_many_rows.csv  valid.csv  xlsx.csv  zip_file.csv
src/aws-lambda/imports_to_outputs_ddb_table/: README.md  pyproject.toml
src/aws-lambda/imports_to_outputs_ddb_table/imports_to_outputs_ddb_table/: imports_to_outputs_ddb_table.py
src/aws-lambda/imports_to_outputs_ddb_table/imports_to_outputs_ddb_table/metadata_store/: __init__.py  create.py  dynamodb.py  metadata_item.py  output_write.py
src/aws-lambda/imports_to_outputs_ddb_table/imports_to_outputs_ddb_table/utils/: exceptions.py  logger.py
src/aws-lambda/imports_to_outputs_ddb_table/tests/: conftest.py  test_imports_to_outputs_ddb_table.py
src/aws-lambda/slack_alert/: pyproject.toml
src/aws-lambda/slack_alert/slack_alert/: slack_alert.py
src/aws-lambda/slack_alert/tests/: test_slack_alert.py
terraform/: .trivyignore
terraform/shared/: example_shared_locals.tf  variables.tf
terraform/vars/: example.tfvars  example_common.tfvars
(+339 files in other folders)
