[tool.poetry]
name = "portal-banner"
version = "0.1.0"
description = ""
authors = ["scarlett,kynoch1 <scarlett.kynoch1@nhs.net>"]
readme = "README.md"
packages = [{include = "portal_banner"}]

[tool.poetry.dependencies]
python = "^3.9"
inquirer = "^3.1.3"
boto3 = "^1.26.150"
dateparser = "^1.1.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
moto = "^4.1.11"
freezegun = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
