[project]
name = "portal-banner"
version = "0.1.0"
readme = "README.md"
packages = [{include = "portal_banner"}]
requires-python = ">=3.13,<3.14"

authors = [
    { name="First Last", email="first.last@example.com" },
]

dependencies = [
    "aws-lambda-powertools==3.19.0",
    "boto3==1.40.48",
    "inquirer==3.4.1",
    "dateparser==1.2.2"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
moto = "^5.1.0"
freezegun = "^1.5.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
