[tool.poetry]
name = "add-weekly-banner"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"
packages = [{include = "add_weekly_banner"}]

[tool.poetry.dependencies]
python = "^3.9"
pytz = "^2023.3.post1"
aws-lambda-powertools = "^2.32.0"


[tool.poetry.group.dev.dependencies]
boto3 = "^1.34.25"
pytest = "^7.4.4"
moto = {extras = ["dynamodb"], version = "^4.2.13"}
freezegun = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
