[project]
name = "add-weekly-banner"
version = "0.1.0"
description = ""
readme = "README.md"
packages = [{include = "add_weekly_banner"}]
requires-python = ">=3.13,<3.14"

authors = [
    { name="First Last", email="first.last@example.com" },
]

dependencies = [
    "aws-lambda-powertools==3.19.0",
    "pytz==2025.2",
]

[tool.poetry.group.dev.dependencies]
boto3 = "^1.34.32"
pytest = "^8.4.1"
moto = {extras = ["dynamodb"], version = "^5.1.0"}
freezegun = "^1.5.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
