[project]
name = "data-in-forwarder"
version = "0.1.0"
description = ""
readme = "README.md"
packages = [{include = "data_in_forwarder"}]
requires-python = ">=3.13,<3.14"

authors = [
    { name="First Last", email="first.last@example.com" },
]

dependencies = [
    "aws-lambda-powertools==3.23.0",
    "boto3==1.40.48",
    "jinja2==3.1.6",
]

[tool.poetry.group.dev.dependencies]
mypy = "^1.18.2"
black = "^25.9.0"
pylint = "^3.3.9"
pytest = "^8.4.1"
pytest-cov = "^7.0.0"
moto = "^5.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "./data_in_forwarder"
]