[tool.poetry]
name = "slack_alert"
version = "0.1.0"
description = ""
authors = ["First Last<first.last@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aws-lambda-powertools = "^1.25.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
urllib3 = "^1.26.9"
moto = "^3.1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
