[project]
name = "slack_alert"
version = "0.1.0"
description = ""
requires-python = ">=3.13,<3.14"

authors = [
    { name="First Last", email="first.last@example.com" },
]

dependencies = [
    "aws-lambda-powertools==3.19.0",
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
urllib3 = "^2.6.3"
moto = "^5.1.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
